[patch] added html pages

--- a/templates/structures/navbar.html
+++ b/templates/structures/navbar.html
@@ -9,19 +9,27 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
+        <a class="nav-link" href="/users">users</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/fuel">fuel</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="/cars">cars</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/fuel">add flight</a>
+        <a class="nav-link" href="#">maintanance</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/maintenance">maintenance</a>
+        <a class="nav-link" href="#">fuel log</a>
+      <li class="nav-item">
+        <a class="nav-link" href="#">maintanance log</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/add costs">add costs</a>
+        <a class="nav-link" href="#">consumption cost</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/add fuels">add fuels</a>
+        <a class="nav-link" href="#">maintenance cost</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/logout">logout</a>
