--- a/templates/fuel.html
+++ b/templates/fuel.html
@@ -6,30 +6,20 @@
 
     {% include '/structures/navbar.html' %}
 
-    <h1>Cars</h1>
+    <h1>Fuel</h1>
 
     <table class="table table-hover">
       <thead>
         <tr>
-          <th scope="col">carid</th>
-          <th scope="col">brand</th>
-          <th scope="col">typename</th>
-          <th scope="col">engine</th>
-          <th scope="col">year</th>
-          <th scope="col">carowner</th>
-          <th scope="col">fuelid</th>
+          <th scope="col">id</th>
+          <th scope="col">type</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          {% for entry in cars %}
-          <th scope="row">{{ entry.carid }}</th>
-          <td>{{ entry.brand }}</td>
-          <td>{{ entry.typename }}</td>
-          <td>{{ entry.engine }}</td>
-          <td>{{ entry.year }}</td>
-          <td>{{ entry.carowner }}</td>
-          <td>{{ entry.fuelid }}</td>
+          {% for entry in fuel %}
+          <th scope="row">{{ entry.fuelid }}</th>
+          <td>{{ entry.fueltype }}</td>
         </tr>
         {% endfor %}
       </tbody>
