--- a/templates/structures/navbar.html
+++ b/templates/structures/navbar.html
@@ -36,3 +36,6 @@
       </li>
     </ul>
 </nav>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
