--- a/templates/users.html
+++ b/templates/users.html
@@ -6,7 +6,7 @@
 
     {% include '/structures/navbar.html' %}
 
-    <h1>Users</h1>
+    <h3>Users</h3>
 
     <table class="table table-hover">
       <thead>
@@ -24,6 +24,21 @@
         {% endfor %}
       </tbody>
     </table>
+
+    <h3>Add user</h3>
+    <form action="/users" method="POST">
+      <div class="form-group">
+        <label for="name">username *</label>
+        <input type="text" class="form-control" placeholder="username" name="username" required />
+      </div>
+      <div class="form-group">
+        <label for="password">password *</label>
+        <input type="password" class="form-control" placeholder="password" maxlength="24" name="password" required />
+      </div>
+      <p>
+        <button type="submit" class="btn btn-dark">submit</button>
+      </p>
+    </form>
 
     {% include '/structures/footer.html' %}
   </div>
